# OpenMPAndroidTest

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/paleozogt/openmptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Bar.cpp  Bar.hpp  BarJNI.cpp  Foo.cpp  Foo.hpp  FooJNI.cpp
app/src/main/java/org/paleozogt/openmptest/: Bar.java  Foo.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/paleozogt/openmptest/: ExampleUnitTest.java
gradle/: helper.gradle  signing-utils.gradle
gradle/wrapper/: gradle-wrapper.properties
